[tool.poetry]
name = "ares"
version = "0.1.0"
description = ""
authors = ["Walker McHugh <walker.mchugh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyperclip = "^1.8.2"

[tool.poetry.scripts]
pwordgen = "ares.pwordgen:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
